--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "express": "^4.16.3",
     "express-session": "^1.15.6",
     "mongoose": "^5.2.13",
+    "passport": "^0.4.0",
+    "passport-github": "^1.1.0",
+    "passport-local": "^1.0.0",
     "pug": "^2.0.3"
   },
   "devDependencies": {
